IFS shell script

--- a/02-nginx.yaml
+++ b/02-nginx.yaml
@@ -1,5 +1,6 @@
 - name: install and run nginx
   hosts: web
+  become: yes
   tasks:
   - name: installing nginx package
     ansible.builtin.package:
