IFS shell script

--- a/03-variables.yaml
+++ b/03-variables.yaml
@@ -1,5 +1,5 @@
 - name: variables from palybook level
-  hosts: localhosts
+  hosts: localhost
   vars:
     cource: "Devops"
     triner: "shivakumar"
