IFS shell script

--- a/08-variables-orgslevel.yaml
+++ b/08-variables-orgslevel.yaml
@@ -3,4 +3,4 @@
   tasks:
   - name: check variables
     ansible.builtin.debug:
-      msg: "hai i am lerning {{person}}, triner is {{wishes}}"
+      msg: "hai i am {{person}}, {{wishes}}"
